--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         />
         <p></p>
         <div id="radio-button-value">?</div>
+        <p>Choose a mode</p>
         <div id="radio-buttons">
           <label
             class="mdl-radio mdl-js-radio mdl-js-ripple-effect"
@@ -71,10 +72,10 @@
             <input
               checked
               class="mdl-radio__button"
-              id="flash1"
+              id="positive"
               name="flash"
               type="radio"
-              value="on"
+              value="positive"
             />
             <span class="mdl-radio__label">Positive</span>
           </label>
@@ -84,10 +85,10 @@
           >
             <input
               class="mdl-radio__button"
-              id="flash2"
+              id="negative"
               name="flash"
               type="radio"
-              value="off"
+              value="negative"
             />
             <span class="mdl-radio__label">Negative</span>
           </label>
