--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>My first Slider</title>
     <link
       rel="canonical"
-      href="https://andre-deveau.github.io/ICS2O-Unit-5-02/"
+      href="https://andre-deveau.github.io/ICS20-Unit-5-02/"
     />
-    <link rel="manifest" href="/ICS2O-Unit-5-02/manifest.webmanifest" />
+    <link rel="manifest" href="/ICS20-Unit-5-02/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- None blocking for Lighthouse report -->
     <!-- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously -->
