--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
-<!-- ICS2O-My first PWA -->
+<!--- ICS2O-Unit-5-02 --->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My first Radio Button Program" />
+    <meta name="description" content="My First Radio Button Program" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Andre Deveau" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>My first Slider</title>
+    <title>My First Radio Button Program</title>
     <link
       rel="canonical"
-      href="https://andre-deveau.github.io/ICS20-Unit-5-02/"
+      href="https://andre-deveau.github.io/ICS2O-Unit-5-02/"
     />
-    <link rel="manifest" href="/ICS20-Unit-5-02/manifest.webmanifest" />
+    <link rel="manifest" href="/ICS2O-Unit-5-02/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <!-- None blocking for Lighthouse report -->
-    <!-- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously -->
+    <!--- None blocking for Lighthouse report --->
+    <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       media="none"
       onload="if(media!='all')media='all'"
     />
-    <noscript
-      ><link
+    <noscript>
+      <link
         rel="stylesheet"
         href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    /></noscript>
+      />
+    </noscript>
     <link
       rel="stylesheet"
       href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"
       media="none"
       onload="if(media!='all')media='all'"
     />
-    <noscript
-      ><link
+    <noscript>
+      <link
         rel="stylesheet"
         href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"
-    /></noscript>
+      />
+    </noscript>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first Radio Button Program</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
@@ -55,15 +56,8 @@
       </header>
       <main class="mdl-layout__content">
         <p></p>
-        <img
-          src="./images/notebook-animation.svg"
-          alt="Computer"
-          width="25%"
-          height="25%"
-        />
-        <p></p>
-        <div id="radio-button-value">?</div>
-        <p>Choose a mode</p>
+        <img src="./images/notebook-animation.svg" alt="Computer" />
+        <p>Generate positive of negative number</p>
         <div id="radio-buttons">
           <label
             class="mdl-radio mdl-js-radio mdl-js-ripple-effect"
@@ -72,10 +66,10 @@
             <input
               checked
               class="mdl-radio__button"
-              id="positive"
+              id="flash1"
               name="flash"
               type="radio"
-              value="positive"
+              value="on"
             />
             <span class="mdl-radio__label">Positive</span>
           </label>
@@ -85,10 +79,10 @@
           >
             <input
               class="mdl-radio__button"
-              id="negative"
+              id="flash2"
               name="flash"
               type="radio"
-              value="negative"
+              value="off"
             />
             <span class="mdl-radio__label">Negative</span>
           </label>
@@ -101,6 +95,7 @@
           >
             Show Value
           </button>
+          <div id="radio-button-value">Your random number is: .</div>
         </div>
       </main>
     </div>
